[gd_scene load_steps=12 format=2]

[ext_resource path="res://TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://sprites/backgrounds/simple_daytime.png" type="Texture" id=2]
[ext_resource path="res://sprites/UI/logo.png" type="Texture" id=3]
[ext_resource path="res://UI/NewGameButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/SelectLevelButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/ExitButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://fonts/montserrat_24.tres" type="DynamicFont" id=7]
[ext_resource path="res://physical_mouse.gd" type="Script" id=8]
[ext_resource path="res://soudFX/button_mouse_over.wav" type="AudioStream" id=9]
[ext_resource path="res://soudFX/button_clicked.wav" type="AudioStream" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 1040.0
margin_bottom = 128.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 132.0
margin_right = 1040.0
margin_bottom = 352.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 518.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="NewGameButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_right = 518.0
margin_bottom = 60.0

[node name="SelectLevelButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 5 )]
margin_top = 80.0
margin_right = 518.0
margin_bottom = 140.0

[node name="ExitButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 6 )]
margin_top = 160.0
margin_right = 518.0
margin_bottom = 220.0

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
margin_left = 522.0
margin_right = 1040.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VersionLaber" type="Label" parent="Menu"]
margin_top = 356.0
margin_right = 1040.0
margin_bottom = 560.0
size_flags_vertical = 7
custom_fonts/font = ExtResource( 7 )
text = "
Version 1.0
Baldini Marcelo"

[node name="Falling_trash_timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="physical_mouse" type="KinematicBody2D" parent="."]
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="physical_mouse"]
shape = SubResource( 1 )

[node name="mouse_over" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -25.0

[node name="clicked" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -25.0
[connection signal="focus_entered" from="Menu/CenterRow/Buttons/NewGameButton" to="." method="_on_NewGameButton_focus_entered"]
[connection signal="mouse_entered" from="Menu/CenterRow/Buttons/NewGameButton" to="." method="_on_NewGameButton_mouse_entered"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="focus_entered" from="Menu/CenterRow/Buttons/SelectLevelButton" to="." method="_on_SelectLevelButton_focus_entered"]
[connection signal="mouse_entered" from="Menu/CenterRow/Buttons/SelectLevelButton" to="." method="_on_SelectLevelButton_mouse_entered"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/SelectLevelButton" to="." method="_on_SelectLevelButton_pressed"]
[connection signal="focus_entered" from="Menu/CenterRow/Buttons/ExitButton" to="." method="_on_ExitButton_focus_entered"]
[connection signal="mouse_entered" from="Menu/CenterRow/Buttons/ExitButton" to="." method="_on_ExitButton_mouse_entered"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="timeout" from="Falling_trash_timer" to="." method="_on_Falling_trash_timer_timeout"]
